# goit-pythonweb-hw-10

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0e225fa563df_create_contacts_table.py  96ea5a4f669e_update_all_tables.py  981eaada12a9_add_users_table.py  a6635ee4a217_create_contacts_table.py  a6c59568c0ca_update_users_table.py  e67a08603daf_create_contacts_table.py
src/: schemas.py
src/api/: api_auth.py  api_contacts.py  api_users.py
src/conf/: config.py
src/db/: models.py
src/repository/: repo_contacts.py  repo_users.py
src/services/: service_auth.py  service_cloudinary.py  service_contacts.py
